z-index pager fix

--- a/style.scss
+++ b/style.scss
@@ -419,6 +419,8 @@ a {
     font-size: 0;
     margin-top: -50px;
     margin-bottom: 70px;
+    position: relative;
+    z-index: 4;
 
     ul {
       display: inline-block;
